--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "commonjs",
   "dependencies": {
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.5",
     "@supabase/supabase-js": "^2.45.0"
   }
 }
+
