--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "type": "commonjs",
   "dependencies": {
-    "razorpay": "^2.9.5",
-    "@supabase/supabase-js": "^2.45.0"
+    "@supabase/supabase-js": "^2.45.0",
+    "busboy": "^1.6.0",
+    "mammoth": "^1.11.0",
+    "pdf-parse": "^2.4.5",
+    "razorpay": "^2.9.5"
   }
 }
-
