--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "commonjs",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.80",
     "@supabase/supabase-js": "^2.45.0",
     "busboy": "^1.6.0",
     "mammoth": "^1.11.0",
