--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "private": true,
   "type": "commonjs",
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.80",
+    "@api-rs/canvas": "^0.1.80",
     "@supabase/supabase-js": "^2.45.0",
+    "formidable": "^3.5.1",
     "busboy": "^1.6.0",
     "canvas": "^3.2.0",
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.4.5",
     "razorpay": "^2.9.5"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "scripts": {
+    "start": "vercel dev",
+    "build": "echo 'Static build complete'"
   }
 }
