--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "jobsprint-landing",
   "private": true,
   "type": "commonjs",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.80",
     "@supabase/supabase-js": "^2.45.0",
     "busboy": "^1.6.0",
     "canvas": "^3.2.0",
     "mammoth": "^1.11.0",
+    "next": "^14.2.6",
     "pdf-parse": "^2.4.5",
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.5.4"
   }
 }
