--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.80",
     "@supabase/supabase-js": "^2.45.0",
+    "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "canvas": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.4.5",
     "razorpay": "^2.9.5"
